--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ section.imagem{
 
 section.imagem > p{
   background-color: rgba(0, 0, 0, 0.473);
-  width: 500px;
+  width: 80%;
   display: inline-block;
   padding: 5px;
   text-shadow: 1px 1px 0px black;
